--- a/views/view_contract_management_views.xml
+++ b/views/view_contract_management_views.xml
@@ -7,9 +7,9 @@
             <form string="Contract Management">
                 <header>
                     <field name="state" widget="statusbar" statusbar_visible="draft,signature_in_process,signed,active" clickable="1"/>
-                    <button string="Activate Contract" type="object" name="action_activate" 
-                            class="btn-primary" invisible="state not in ['draft', 'signed']"
-                            icon="fa-check-circle"/>
+                    <button string="Recompute Total Paid" type="object" name="action_recompute_total_paid" 
+                            class="btn-primary"
+                            icon="fa-refresh"/>
                     <button string="Terminate Contract" type="object" name="action_terminate" 
                             class="btn-danger" invisible="state not in ['active', 'renewal_due']"
                             icon="fa-times-circle" confirm="Are you sure you want to terminate this contract?"/>
