stable with dashboard

--- a/views/contract_dashboard_views.xml
+++ b/views/contract_dashboard_views.xml
@@ -5,11 +5,11 @@
         <field name="name">contract.dashboard.form</field>
         <field name="model">contract.dashboard</field>
         <field name="arch" type="xml">
-            <form string="Contract Dashboard">
+            <form string="Contract Dashboard" class="o_contract_dashboard_form">
                 <header>
                     <button name="action_refresh_statistics" type="object" string="Refresh" class="oe_highlight"/>
                 </header>
-                <sheet>
+                <sheet style="max-width: 100% !important;">
                     <div class="oe_title">
                         <h1>
                             <field name="name" placeholder="Dashboard Name"/>
@@ -28,77 +28,63 @@
                         </group>
                     </group>
                     
-                    <group name="summary" string="Summary Statistics">
-                        <group>
-                            <field name="total_contracts" widget="statinfo"/>
-                            <field name="total_contract_value" widget="monetary"/>
-                            <field name="avg_contract_value" widget="monetary"/>
+                    <group name="summary_row" string="Summary" col="2" class="o_full_width">
+                        <group col="1" class="o_vertical_alignment_top">
+                            <separator string="Summary by Contract Status"/>
+                            <field name="state_summary_html" widget="html" nolabel="1"/>
                         </group>
-                    </group>
-                    
-                    <group name="status_buttons" string="Contracts by Status">
-                        <button name="action_view_draft_contracts" type="object" class="oe_stat_button" icon="fa-file-text-o">
-                            <field name="total_draft" widget="statinfo" string="Draft"/>
-                        </button>
-                        <button name="action_view_active_contracts" type="object" class="oe_stat_button" icon="fa-check-circle">
-                            <field name="total_active" widget="statinfo" string="Active"/>
-                        </button>
-                        <button name="action_view_signed_contracts" type="object" class="oe_stat_button" icon="fa-pencil-square-o">
-                            <field name="total_signed" widget="statinfo" string="Signed"/>
-                        </button>
-                        <button name="action_view_expired_contracts" type="object" class="oe_stat_button" icon="fa-calendar-times-o">
-                            <field name="total_expired" widget="statinfo" string="Expired"/>
-                        </button>
-                        <button name="action_view_renewal_due_contracts" type="object" class="oe_stat_button" icon="fa-refresh">
-                            <field name="total_renewal_due" widget="statinfo" string="Renewal Due"/>
-                        </button>
-                        <field name="total_signature_in_process" invisible="1"/>
-                        <field name="total_terminated" invisible="1"/>
+                        <group col="1" class="o_vertical_alignment_top">
+                            <separator string="Summary by Signature Status"/>
+                            <field name="signature_summary_html" widget="html" nolabel="1"/>
+                        </group>
                     </group>
                     
                     <notebook>
                         <page string="Expiring in 30 Days" name="expiration_30">
-                            <group>
+                            <group col="1" class="o_full_width">
                                 <button name="action_view_expiring_30_days" type="object" class="oe_stat_button" icon="fa-exclamation-triangle">
                                     <field name="expiring_30_days" widget="statinfo" string="Total Count"/>
                                 </button>
-                            </group>
-                            <group>
-                                <field name="expiring_30_days_list" widget="text" nolabel="1" placeholder="No contracts expiring in 30 days"/>
+                                <field name="expiring_30_days_list" widget="html" nolabel="1" placeholder="No contracts expiring in 30 days"/>
                             </group>
                         </page>
                         
                         <page string="Expiring in 60 Days" name="expiration_60">
-                            <group>
+                            <group col="1" class="o_full_width">
                                 <button name="action_view_expiring_60_days" type="object" class="oe_stat_button" icon="fa-calendar">
                                     <field name="expiring_60_days" widget="statinfo" string="Total Count"/>
                                 </button>
-                            </group>
-                            <group>
-                                <field name="expiring_60_days_list" widget="text" nolabel="1" placeholder="No contracts expiring in 60 days"/>
+                                <field name="expiring_60_days_list" widget="html" nolabel="1" placeholder="No contracts expiring in 60 days"/>
                             </group>
                         </page>
                         
                         <page string="Expiring in 90 Days" name="expiration_90">
-                            <group>
+                            <group col="1" class="o_full_width">
                                 <button name="action_view_expiring_90_days" type="object" class="oe_stat_button" icon="fa-calendar-o">
                                     <field name="expiring_90_days" widget="statinfo" string="Total Count"/>
                                 </button>
+                                <field name="expiring_90_days_list" widget="html" nolabel="1" placeholder="No contracts expiring in 90 days"/>
                             </group>
-                            <group>
-                                <field name="expiring_90_days_list" widget="text" nolabel="1" placeholder="No contracts expiring in 90 days"/>
+                        </page>
+                        
+                        <page string="Non Compliant" name="non_compliant">
+                            <group col="1" class="o_full_width">
+                                <button name="action_view_non_compliant" type="object" class="oe_stat_button" icon="fa-warning">
+                                    <field name="non_compliant_count" widget="statinfo" string="Total Count"/>
+                                </button>
+                                <field name="non_compliant_list" widget="html" nolabel="1" placeholder="No non compliant contracts"/>
                             </group>
                         </page>
                         
                         <page string="Top Partners" name="partners">
-                            <group>
-                                <field name="top_partners_summary" widget="text" nolabel="1"/>
+                            <group col="1" class="o_full_width">
+                                <field name="top_partners_summary" widget="html" nolabel="1"/>
                             </group>
                         </page>
                         
                         <page string="Contract Term Distribution" name="terms">
-                            <group>
-                                <field name="term_distribution" widget="text" nolabel="1"/>
+                            <group col="1" class="o_full_width">
+                                <field name="term_distribution" widget="html" nolabel="1"/>
                             </group>
                         </page>
                     </notebook>
@@ -116,7 +102,7 @@
                 <field name="name"/>
                 <field name="total_contracts"/>
                 <field name="total_active"/>
-                <field name="total_signed"/>
+                <field name="total_draft"/>
                 <field name="total_expired"/>
                 <field name="total_renewal_due"/>
                 <field name="total_contract_value"/>
@@ -133,35 +119,35 @@
                             </div>
                             <div class="container o_kanban_card_content">
                                 <div class="row">
-                                    <div class="col-6">
+                                    <div class="col-3">
                                         <button class="btn btn-primary" name="action_view_active_contracts" type="object">
                                             <span><t t-esc="record.total_active.value"/> Active</span>
                                         </button>
                                     </div>
-                                    <div class="col-6">
-                                        <button class="btn btn-info" name="action_view_signed_contracts" type="object">
-                                            <span><t t-esc="record.total_signed.value"/> Signed</span>
-                                        </button>
-                                    </div>
-                                </div>
-                                <div class="row mt-2">
-                                    <div class="col-6">
-                                        <button class="btn btn-warning" name="action_view_renewal_due_contracts" type="object">
+                                    <div class="col-3">
+                                        <button class="btn btn-info" name="action_view_renewal_due_contracts" type="object">
                                             <span><t t-esc="record.total_renewal_due.value"/> Renewal Due</span>
                                         </button>
                                     </div>
-                                    <div class="col-6">
-                                        <button class="btn btn-danger" name="action_view_expired_contracts" type="object">
+                                    <div class="col-3">
+                                        <button class="btn btn-warning" name="action_view_expired_contracts" type="object">
                                             <span><t t-esc="record.total_expired.value"/> Expired</span>
+                                        </button>
+                                    </div>
+                                    <div class="col-3">
+                                        <button class="btn btn-secondary" name="action_view_draft_contracts" type="object">
+                                            <span><t t-esc="record.total_draft.value"/> Draft</span>
                                         </button>
                                     </div>
                                 </div>
                                 <div class="row mt-3">
-                                    <div class="col-12">
-                                        <strong>Total Contracts:</strong> <t t-esc="record.total_contracts.value"/>
+                                    <div class="col-6">
+                                        <strong>Total Contracts</strong><br/>
+                                        <span class="o_stat_value"><t t-esc="record.total_contracts.value"/></span>
                                     </div>
-                                    <div class="col-12">
-                                        <strong>Total Value:</strong> $<t t-esc="Math.round(record.total_contract_value.value * 100) / 100"/>
+                                    <div class="col-6">
+                                        <strong>Total Value</strong><br/>
+                                        <span class="o_stat_value">$<t t-esc="Math.round(record.total_contract_value.value * 100) / 100"/></span>
                                     </div>
                                 </div>
                                 <div class="row mt-2">
@@ -183,7 +169,8 @@
     <record id="action_contract_dashboard" model="ir.actions.act_window">
         <field name="name">Contract Dashboard</field>
         <field name="res_model">contract.dashboard</field>
-        <field name="view_mode">kanban,form</field>
+        <field name="view_mode">form,kanban</field>
+        <field name="res_id" eval="ref('contract_management.contract_dashboard_default')"/>
         <field name="domain">[]</field>
         <field name="context">{'default_name': 'Contract Overview'}</field>
         <field name="target">current</field>
