--- a/views/view_sale_order_sub_close_form.xml
+++ b/views/view_sale_order_sub_close_form.xml
@@ -5,17 +5,12 @@
         <field name="model">sale.order</field>
 		<field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
+            <!-- Close Subscription button removed per user request -->
             <xpath expr="//button[@name='action_quotation_send']" position="before">
-                    <button name="action_open_closure_wizard" string="Close Subscription" type="object" class="btn-primary"/>
-            </xpath>
-            <xpath expr="//button[@name='action_open_closure_wizard']" position="before">
                     <button name="action_pause_subscription_wizard" string="Pause Subscription" type="object" class="oe_highlight"/> 
             </xpath>
-            <xpath expr="//button[@name='action_open_closure_wizard']" position="before">
+            <xpath expr="//button[@name='action_pause_subscription_wizard']" position="before">
                     <button name="action_reactivate_subscription_wizard" string="Reactivate Subscription" type="object" class="oe_highlight"/> 
-            </xpath>
-            <xpath expr="//button[@name='action_open_closure_wizard']" position="attributes">
-                <attribute name="invisible">state != "sale" and subscription_state not in ["3_progress", "4_paused"] or not id</attribute>
             </xpath>
             <xpath expr="//button[@name='action_pause_subscription_wizard']" position="attributes">
                 <attribute name="invisible">contract_term != 4 or not id</attribute>
